Updated book log